increase opacity to fix contrast rating

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -252,7 +252,7 @@ blockquote {
   Footer
 \*-------------------------------------*/
 .footer {
-  opacity: .7;
+  opacity: .8;
 
   &__contact {
     padding: 0 10vw 2vw;
